--- a/trunk/GAEA-gateway/src/main/resources/dev/application.properties
+++ b/trunk/GAEA-gateway/src/main/resources/dev/application.properties
@@ -18,3 +18,8 @@ http.server.idleTimeout=5000
 http.server.sendBufferSize=50000000
 http.server.receiveBufferSize=50000000
 
+redis.host=10.86.10.86
+redis.port=6379
+redis.configKey=vertx_config
+redis.auth=2wAZJzsrvGdnxL8c7ymgODSP
+
